# books_shop

./: .gitignore  Untitled.ipynb  main.py  my_web_server.py  pyproject.toml  requirements.txt  socketio_server.py  web_index.html  web_socket_client.py  web_socket_server.py
.github/workflows/: django.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
api/: jwt_user_model.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_delete_customjwtuser.py
bookshop/: asgi.py  celery.py  settings.py  urls.py
chat/: consumers.py  routing.py  urls.py  views.py
chat/static/: socket.js
chat/templates/: chat.html  room.html
hotel/: admin.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py  views_api.py
hotel/migrations/: 0002_auto_20211214_1724.py  0003_alter_orderroom_options.py
hotel/templates/: search_room.html  show_rooms.html
myapp/: admin.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
myapp/migrations/: 0001_initial.py  0009_alter_comment_order_with_respect_to.py  0010_comment_my_custom_like.py  0011_auto_20220120_1857.py  0012_remove_comment_like.py  0013_authorsstatistic.py
myapp/static/: script.js
myapp/templates/: comment_form.html  index.html  login.html
templates/: main_page.html
web_chat/: admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
web_chat/migrations/: 0001_initial 2.py  0001_initial.py  0002_chatmessage_user.py
web_chat/static/: web_socket_client.js
web_chat/templates/: chat_index.html
