[tool.poetry]
name = "books_shop"
version = "0.1.0"
description = "xuipten"
authors = ["bogdankozlovsky <bogdan.k@datarails.com>"]

[tool.poetry.dependencies]
python = "^3.9"
channels="3.0.4"
channels-redis="3.3.1"
Django="3.2.9"
django-debug-toolbar="3.2.4"
django-filter="21.1"
django-guardian="2.4.0"
djangorestframework="3.12.4"
Pillow="8.4.0"
websockets="10.1"



[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
